src/assets/style.css
/* style.css */
.spinner {
    border: 4px solid rgba(255, 255, 255, 0.3);
    border-top: 4px solid #3498db;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    animation: spin 2s linear infinite;
    display: none;
}
.d-flex.align-items-center {
    display: flex;
    align-items: center;
}
.spinner-border {
    margin-left: 10px;
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
   }
    100% {
        transform: rotate(360deg);
   }
}
.navbar-nav {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
}
.navbar-brand {
    padding-right: 0.5rem;
}
.custom-select {
    min-width: 150px;
}
.navbar {
    min-height: 70px;
}
.version-text {
    white-space: nowrap;
    min-width: max-content;
    color: black;
}
.comparison-text {
    white-space: nowrap;
    color: black;
}

.ml-auto {
    display: flex;
    flex-wrap: nowrap;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow-y: auto;
}

body > header {
    background-color: #EEEEEE;
    border-bottom: 6px solid #2c862d;
    height: 84px;
}

body > nav {
    margin: 10px;
    height:42px
}

body > main {
    flex: 1;
    margin: 10px;
    overflow-y: hidden;
    max-height: calc(100vh - 84px - 42px - 42px - 44px);
}

body > footer {
    height: 42px;
}

#fields-tab-content {
    overflow-y: hidden;
    overflow-x: hidden;
}
#fields-tab-content > * {
    flex: 1;
    padding: 0px 10px;
}
.column {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.jstree-wholerow-ul {
    background-color: white;
    display: block;
}

.column > *:nth-child(2) {
    flex: 1;
    overflow-y: auto;
}

.removed-node > a {
    color: black !important;
    background-color: #FFCCD0 !important;
    border-radius: 5px !important;
    border-left: 1px solid white;
    border-right: 1px solid white;
}
.added-node > a {
    background-color: #CCFFD8 !important;
    color: black !important;
    border-radius: 5px !important;
    border-left: 1px solid white;
    border-right: 1px solid white;
}
.modified-node > a {
    background-color: #CCD3FF !important;
    color: black !important;
    border-radius: 5px !important;
    border-left: 1px solid white;
    border-right: 1px solid white;
}
.changed-label {
    font-weight: bold;
    color: #333;
}
#detailsContent {
    max-height: 100vh;
    overflow-y: auto;
    overflow-x: hidden;
}
#apiStatus {
    position: fixed;
    bottom: 10px;
    right: 10px;
    z-index: 1050;
    max-width: 300px;
    display: none;
    align-items: center;
    justify-content: center;
    padding: 10px;
}
/* Legend styling */
.legend-container {
    display: flex;
    align-items: center;
    padding: 10px;
}
.legend-title {
    font-weight: bold;
    margin-right: 10px;
}
.legend-item {
    display: inline-block;
    padding: 2px 6px;
    color: #fff;
    margin-right: 5px;
    border-radius: 4px;
    font-size: 0.875rem;
}
.legend-item.added {
    background-color: #CCFFD8;
    color: #000000;
}
.legend-item.removed {
    background-color: #FFCCD0;
    color: #000000;
}
.legend-item.modified {
    background-color: #CCD3FF;
    color: #000000;
}
.notice-types-dropdown-container {
    display: flex;
    align-items: center;
    padding: 10px 10px 0px 10px;
}
.notice-types-header {
    margin-right: 10px;
   /* Adjust as needed for spacing */
}
.notice-types-dropdown {
    width: auto;
   /* Adjust as needed */
    max-width: 200px;
   /* Fixed width size */
}
.comparison-item {
    border: 1px solid #ddd;
    margin-bottom: 10px;
    padding: 10px;
}

.card-group {
    height: calc(100vh - 290px);
    overflow-y: auto;
    background-color: #f8f9fa;
    border: 1px solid #ddd;
    padding: 15px;
    display: flex;
    flex-wrap: wrap;
}

.card-group index-card {
    flex: 1 0 300px;
    margin: 10px;
}

.notice-types-dropdown-container {
    padding: 10px;
}

.notice-types-dropdown-container .notice-types-header {
    margin-bottom: 10px;
}

.notice-types-dropdown-container .custom-select {
    width: 100%;
}

/* Legend styles */
.legend-container {
    width: 100%;
    background-color: #f8f9fa;
   /* To match tab content background */
    padding: 10px;
    border-top: 1px solid #ddd;
}
.comparison-item-container {
    background-color: #fff;
    border-radius: 6px;
    padding: 10px;
    margin-bottom: 10px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
}

.tree-container {
    padding: 8px;
}

.details-container {
    padding: 0px;
}

.details-container .list-group {
    margin: -1px;
}

#noticeTypesDetailsContainer {
    flex: 1;  
    padding: 0 10px;
}

#noticeTypesContent {
    display: flex;
    flex-direction: row;
    flex: 1;
    margin: 10px 0;
}

.tree-container,
.details-container {
    flex: 1;
    overflow-x: hidden;
    overflow-y: auto;
    border: 1px solid #ddd;
    background-color: #f8f9fa;
    background-color: white;
    box-shadow: 1px 1px 3px 1px lightgray;
    margin: 4px;
}

#fields-tab-content  .tree-container,
#fields-tab-content  .details-container {
    height: calc(100% - 36px);
}

#notice-types  .tree-container,
#notice-types  .details-container {
    height: calc(100% - 116px);
}

/* jQuery Treeview */
.jstree-default .jstree-wholerow-hovered {
    height: 24px;
    background: #fcfcfd;
}

.jstree-default .jstree-wholerow-clicked {
    height: 24px;
    background: #d6d6d6;
}

